# rustconsensus

./: .gitignore  Cargo.toml  README.md  todo.txt
cluster/: Cargo.toml
cluster/examples/: playground.rs  simple_cluster.rs  simple_communication_example.rs  simple_node.rs
cluster/examples/common/: mod.rs
cluster/src/cluster/: cluster.rs  cluster_config.rs  cluster_events.rs  cluster_state.rs  discovery_strategy.rs  join_messages.rs  mod.rs
cluster/src/cluster/gossip/: gossip_logic.rs  gossip_messages.rs  mod.rs
cluster/src/cluster/heartbeat/: downing_strategy.rs  heartbeat_logic.rs  heartbeat_messages.rs  mod.rs  reachability_decider.rs  unreachable_tracker.rs
cluster/src/cluster/heartbeat/reachability_decider/: phi_accrual.rs
cluster/src/cluster/state/: command.rs  mod.rs  node_state.rs  snapshot.rs
cluster/src/messaging/: envelope.rs  large_stream.rs  message_module.rs  messaging.rs  mod.rs  node_addr.rs  rudp.rs  transport.rs
cluster/src/messaging/quic/: mod.rs  quic_config.rs  quic_messaging.rs  spki_verifier.rs
cluster/src/messaging/tcp/: _tcp.rs  encryption.rs  mod.rs  tcp_control_messages.rs  tcp_endpoint.rs  tcp_receiver.rs  tcp_sender.rs
cluster/src/messaging/transport/: udp.rs
cluster/src/messaging/transport/reliable_udp/: buffer_pool.rs  receive_sequencer.rs
cluster/src/messaging/transport/ru/: mod.rs
cluster/src/messaging/udp/: mod.rs  udp_config.rs  udp_encryption.rs  udp_message_header.rs  udp_messaging.rs
cluster/src/test_util/: event.rs  message.rs  mod.rs  node.rs
cluster/src/util/: buf.rs  crdt.rs  mod.rs  random.rs  safe_converter.rs
docs/: differences-from-akka.md  reliable-udp.md
examples/: playground.rs  simple_cluster.rs  simple_command_line_node.rs  simple_communication_example.rs  simple_node.rs  simple_two_node_cluster.rs  small_cluster.rs
messaging/: Cargo.toml
messaging/examples/: simple_example.rs
messaging/src/: control_messages.rs  end_point.rs  lib.rs  message_dispatcher.rs  message_header.rs  packet_header.rs  packet_id.rs  raw_send_socket.rs  receive_stream.rs  send_pipeline.rs  send_socket.rs  send_stream.rs  windowed_buffer.rs
networkprotocol/: Cargo.toml
networkprotocol/doc/: congestion-control.md
networkprotocol/examples/: aes.rs  huge.rs  simple_example.rs
networkprotocol/src/: control_messages.rs  message_dispatcher.rs  send_pipeline.rs
src/: lib.rs  node.rs  node_addr.rs  test_util.rs
src/_cluster/: cluster.rs  cluster_join_messages.rs  cluster_messages.rs  driver.rs
src/cluster/: cluster.rs  cluster_config.rs  cluster_driver.rs  cluster_events.rs  cluster_join_messages.rs  cluster_messages.rs  cluster_state.rs  discovery_strategy.rs  driver.rs  gossip.rs  heartbeat.rs  join_messages.rs  mod.rs  state.rs  unreachable_set.rs
src/cluster/gossip/: gossip_logic.rs  gossip_messages.rs  mod.rs
src/cluster/heartbeat/: _tracker.rs  downing_strategy.rs  heartbeat.rs  heartbeat_logic.rs  heartbeat_messages.rs  mod.rs  reachability_decider.rs  unreachable_set.rs  unreachable_tracker.rs
src/cluster/heartbeat/reachability_decider/: fixed_timeout.rs  phi_accrual.rs
src/comm/: communicator.rs  envelope.rs  message_module.rs  messaging.rs  mod.rs  transport.rs
src/messaging/: envelope.rs  message_module.rs  messaging.rs  node_addr.rs  transport.rs
src/messaging/transport/: reliable_udp.rs  udp.rs
src/messaging/transport/reliable_udp/: buffers.rs  config.rs  headers.rs  receive_sequencer.rs  send_sequencer.rs
src/messaging/transport/ru/: mod.rs
src/msg/: envelope.rs  message_module.rs  messaging.rs  node_addr.rs  transport.rs
src/test_util/: event.rs  message.rs  mod.rs  node.rs
src/util/: buf_ext.rs  crdt.rs  mod.rs  random.rs  rolling_data.rs
transport/: Cargo.toml
transport/examples/: aes.rs  huge.rs  simple_example.rs
transport/src/: AtomicMap.rs  atomic_map.rs  buffer_pool.rs  config.rs  control_messages.rs  encryption.rs  end_point.rs  exponential_backoff.rs  hs_congestion_control.rs  lib.rs  message_dispatcher.rs  message_header.rs  packet_header.rs  receive_stream.rs  safe_converter.rs  send_pipeline.rs  send_stream.rs
transport/src/buffers/: atomic_map.rs  buffer_pool.rs  encryption.rs  fixed_buffer.rs  mod.rs
