[package]
name = "rustconsensus"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
ctor = "*"
rstest = "*"
tokio = { version = "*", features = ["full"]}
tracing-subscriber = "*"

[dependencies]
#TODO version numbers
anyhow = "*"
async-trait = "*"
bytes = "*"
bytes-varint = "*"
num_enum = "*"
rand = "*"
rustc-hash = "*"
sha2 = "*"
tokio = { version = "*", features = ["net", "sync", "macros"] } #TODO
tracing = "*"
uuid = { version = "*", features = ["v4"] }
