[package]
name = "rustconsensus"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
ctor = "*"
mockall = "*"
rstest = "*"
tokio = { version = "*", features = ["full", "test-util"]}
tracing-subscriber = "*"

[dependencies]
#TODO version numbers
anyhow = "*"
async-trait = "*"
bit-set = "*"
bytes = "*"
bytes-varint = "*"
crc = "*"
num_enum = "*"
rand = "*"
rustc-hash = "*"
sha2 = "*"
tokio = { version = "*", features = ["net", "sync", "macros"] } #TODO
tracing = "*"
