[package]
name = "cluster"
edition.workspace = true
version.workspace = true

[dev-dependencies]
clap = "*"
clap_derive = "*"
ctor = "*"
http-body-util = "*"
hyper = { version = "*", features = ["full"] }
hyper-util = {  version = "*", features = ["full"] }
mockall = { version = "*" }
rstest = "*"
tokio = { version = "*", features = ["full", "test-util"]}
tracing-subscriber = "*"

[dependencies]
#transport = { path = "../transport" }

#TODO version numbers
aead = { version = "*", features = ["bytes"] }
aes-gcm = "*"
anyhow = "*"
async-trait = "*"
bit-set = "*"
bytemuck = "*"
bytes = "*"
bytes-varint = "*"
crc = "*"
num_enum = "*"
ordered-float = "*"
rand = "*"
rustc-hash = "*"
sha2 = "*"
socket2 = "*"
tokio = { version = "*", features = ["macros", "net", "rt", "sync", "time"] } #TODO
tracing = "*"
