[package]
name = "messaging"
edition.workspace = true
version.workspace = true

[dev-dependencies]
rstest = "*"
tracing-subscriber = "*"

[dependencies]
aes-gcm = "*"
anyhow = "*"
async-trait = "*"
bitflags = "*"
bytes = "*"
bytes-varint = "*"
rustc-hash = "*"
tokio = { version = "*", features = ["full"] } # TODO
tracing = "*"
