[package]
name = "transport"
edition.workspace = true
version.workspace = true

[dev-dependencies]
ctor = "*"
rstest = "*"
tokio = { version = "*", features = ["full", "test-util"]}
tracing-subscriber = "*"

[dependencies]
aes-gcm = "*"
anyhow = "*"
async-trait = "*"
bitflags = "*"
bytes = "*"
bytes-varint = "*"
mockall = "*"
rustc-hash = "*"
tokio = { version = "*", features = ["full"] } # TODO
tracing = "*"
